2006-02-10 [wwp]	2.0.0cvs42

	* src/exporthtml.c
	* src/html.c
	* src/html.h
	* src/procmime.c
	* src/textview.c
		renamed html_ prefixed functions and data structures to avoid
		namespace clashes w/ other software (gtkhtml2 for instance).
		Closes bug #907.


2006-02-09 [colin]	2.0.0cvs41

	* src/summaryview.c
		Fix shitty logic messed up. Thanks Ticho for the hint!

2006-02-09 [wwp]	2.0.0cvs40

	* src/gtk/about.c
	* src/compose.c
	* src/prefs_account.c
	* src/prefs_gtk.h
	* src/editaddress.c
		added mnemonics to notebook widgets (compose, account prefs, about and editaddress),
		patch by Fabien Vantard (fzzzzz!). Solved some mnemonic conflicts around the
		Browse buttons in accounts prefs.

2006-02-09 [colin]	2.0.0cvs39

	* src/matcher.c
		Check for pointer before using its members
	* src/gtk/gtksourceprintjob.c
		Fix a wrong warning

2006-02-09 [wwp]	2.0.0cvs38

	* src/gtk/filesel.c
		fix few compiler warnings (type mismatch).

2006-02-09 [paul]	2.0.0cvs37

	* po/fr.po
		updated by Fabien Vantard

2006-02-08 [colin]	2.0.0cvs36

	* src/prefs_common.c
	* src/common/defs.h
	* src/common/plugin.c
		allow windows and linux configurations to coexist
		patch by Thomas Gilgin

2006-02-08 [colin]	2.0.0cvs35

	* src/filtering.c
	* src/matcher.c
	* src/matcher.h
	* src/matcher_parser_parse.y
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		Add the "Ignore thread" filtering
		action

2006-02-08 [colin]	2.0.0cvs34

	* src/compose.c
	* src/procmime.c
	* src/procmime.h
		Fix bug #905 (damaged attachment)
		text files with raw \0's aren't really text files
	FOR_STABLE

2006-02-08 [colin]	2.0.0cvs33

	* src/summaryview.c
		Fix crasher introduced yesterday

2006-02-08 [wwp]	2.0.0cvs32

	* src/compose.c
	* src/compose.h
		templates enhancement: allow symbols substitutions in To/Cc/Bcc/Subject fields

2006-02-08 [wwp]	2.0.0cvs31

	* src/prefs_template.c
		templates enhancement: allow address completion for Cc and Bcc fields