@@ -1226,3 +1226,4 @@
 ( cvs diff -u -r 1.4.2.28 -r 1.4.2.29 src/gtk/about.c;  cvs diff -u -r 1.382.2.239 -r 1.382.2.240 src/compose.c;  cvs diff -u -r 1.105.2.48 -r 1.105.2.49 src/prefs_account.c;  cvs diff -u -r 1.5.2.6 -r 1.5.2.7 src/prefs_gtk.h;  cvs diff -u -r 1.14.2.15 -r 1.14.2.16 src/editaddress.c;  ) > 2.0.0cvs40.patchset
 ( cvs diff -u -r 1.395.2.167 -r 1.395.2.168 src/summaryview.c;  ) > 2.0.0cvs41.patchset
 ( cvs diff -u -r 1.5.2.11 -r 1.5.2.12 src/exporthtml.c;  cvs diff -u -r 1.12.2.12 -r 1.12.2.13 src/html.c;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/html.h;  cvs diff -u -r 1.49.2.71 -r 1.49.2.72 src/procmime.c;  cvs diff -u -r 1.96.2.94 -r 1.96.2.95 src/textview.c;  ) > 2.0.0cvs42.patchset
+( cvs diff -u -r 1.395.2.168 -r 1.395.2.169 src/summaryview.c;  ) > 2.0.0cvs43.patchset
