@@ -1,3 +1,8 @@
+2006-02-11 [colin]	2.0.0cvs43
+
+	* src/summaryview.c
+		don't allow drag/drop from ourself
+
 2006-02-10 [wwp]	2.0.0cvs42
 
 	* src/exporthtml.c
